MAJOR CHANGE: added support for load-time bytecode instrumentation; minimum java version needed to compile chord now is 1.6 (because of class retransformation API from java.lang.instrument used); also some system properties related to dynamic analysis have changed: 1) chord.reuse.trace -> chord.reuse.traces (default=false); 2) chord.trace.pipe -> chord.trace.kind=[none|full|pipe] (default=pipe); 3) chord.dynamic.continueonerr -> chord.dynamic.haltonerr (default=true); 4) chord.dynamic.timeout.ms -> chord.dynamic.timeout (default=-1); 5) chord.final.trace.file and chord.crude.trace.file -> chord.trace.file; 6) chord.max.constr -> chord.max.cons.size The following new properties have been introduced: 1) chord.instr.kind=[offline|online]; 2) chord.dynamic.silent (default=false) The following old properties have been deleted: chord.runtime.class, chord.check.exclude.std, chord.scope.exclude.std